# 404NotFounders

./: .gitignore  LintasNiaga_3Day_Antigravity_Build_Playbook.md  LintasNiaga_Architecture_Blueprint.md  LintasNiaga_Architecture_Blueprint_v2_1_IngestionAligned.md  LintasNiaga_Comprehensive_Hackathon_PRD.md  LintasNiaga_Comprehensive_PRD_v2_1_IngestionLocked.md  LintasNiaga_Full_Repo_Architecture_Review.md  LintasNiaga_Tech_Stack_Blueprint.md  LintasNiaga_Tech_Stack_Blueprint_v2_1_IngestionAligned.md  LintasNiaga_WINNING_PLAYBOOK.md  QATD.md  README.md  SAD.md  pyproject.toml
apps/api/: .env.example
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  constants.py  exceptions.py  settings.py
apps/api/app/providers/: __init__.py  gnews_provider.py  holiday_provider.py  llm_provider.py  opendosm_provider.py  openweather_provider.py  yfinance_provider.py
apps/api/tests/: conftest.py  test_fx_simulation.py  test_holidays.py  test_landed_cost_monte_carlo.py  test_market_data.py  test_quote_validation.py  test_reference_data.py  test_risk_driver_services.py  test_sunsirs_resin.py
data/reference/: freight_rates.json  ports.json  source_registry.json  tariffs_my_hs.json
docs/: DESIGN.md  LintasNiaga_Comprehensive_PRD.md  PRD.md  progress_tracker.md
docs/unofficial/: LintasNiaga_Architecture_Blueprint.md  LintasNiaga_Tech_Stack_Blueprint.md
scripts/: ingest_energy.py  ingest_fx.py  ingest_holidays.py  ingest_reference.py  ingest_resin.py
tests/: __init__.py  test_market_and_holiday_services.py  test_reference_data_service.py  test_resin_pipeline.py  test_snapshot_repository.py  test_utils.py
(+42 files in other folders)
